@@ -27,7 +27,6 @@ lib/Devel/NYTProf/Core.pm
 lib/Devel/NYTProf/Data.pm
 lib/Devel/NYTProf/FileHandle.pm
 lib/Devel/NYTProf/FileInfo.pm
-lib/Devel/NYTProf/PgPLPerl.pm
 lib/Devel/NYTProf/ReadStream.pm
 lib/Devel/NYTProf/Reader.pm
 lib/Devel/NYTProf/Run.pm
