@@ -7,7 +7,7 @@
 ## http://search.cpan.org/~akaplan/Devel-NYTProf
 ##
 ##########################################################
-# $Id: nytprofhtml 1076 2010-02-20 16:31:12Z tim.bunce $
+# $Id: nytprofhtml 1088 2010-02-27 22:11:08Z tim.bunce $
 ###########################################################
 use warnings;
 use strict;
@@ -491,7 +491,6 @@ $reporter->_output_additional('style.css', get_css());
 $reporter->report();
 
 output_subs_index_page($reporter, "index-subs-excl.html", 'excl_time');
-output_subs_index_page($reporter, "index-subs-incl.html", 'incl_time');
 output_index_page($reporter, "index.html");
 
 output_js_files($reporter);
