@@ -2,7 +2,7 @@
 
 Changes - List of significant changes to Devel::NYTProf
 
-(As of $Date: 2010-02-27 15:14:18 -0500 (Sat, 27 Feb 2010) $ $Revision: 1087 $)
+(As of $Date: 2010-03-01 12:20:41 -0500 (Mon, 01 Mar 2010) $ $Revision: 1091 $)
 
 =cut
 
@@ -29,6 +29,9 @@ string eval merging - must allow at least viewing of source for called subs defi
   Changed some tests to be more informative on failure.
   Changed nytprofhtml to be smarter when source isn't available.
   Changed nytprofhtml to show sort arrow on sortable tables.
+
+  Removed Devel::NYTProf::PgPLPerl module. That's now a separate
+    PostgreSQL::PLPerl::NYTProf distribution.
 
   Updated docs to include a note about timing on Windows.
   Updated docs to include a section about making NYTProf faster.
